<resources>
    <string name="app_name_debug">妹子图_debug</string>
    <string name="app_name_release">妹子图</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="drawer_nav_group_web">网址爬虫</string>
    <string name="drawer_nav_mzitu">妹子网</string>
    <string name="drawer_nav_ligui">丽柜网</string>
    <string name="drawer_nav_group_others">其他</string>
    <string name="drawer_nav_setting">设置</string>
    <string name="drawer_nav_issues">issues</string>
    <string name="drawer_nav_about">关于</string>

    <string name="transition_name_picture">transition_name_picture</string>

    <string name="loading_status_running">正在加载中...</string>
    <string name="loading_status_more">加载更多</string>
    <string name="loading_status_finish">没有更多内容了</string>
</resources>
